amedd bublish config add travas.yml and requirements.txt

--- a/output/index.html
+++ b/output/index.html
@@ -7,7 +7,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="./theme/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/theme/css/main.css" />
     
  <title>Jeff's Site</title>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
@@ -25,7 +25,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top
  bg-info" id="mainNav">
 
-   <a class="navbar-brand js-scroll-trigger" href="./#PageTop"><img src="./theme/images/whitemonogram.png" height="50px" width="50px">
+   <a class="navbar-brand js-scroll-trigger" href="/#PageTop"><img src="/theme/images/whitemonogram.png" height="50px" width="50px">
    </a>
    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
    <div class="collapse navbar-collapse" id="navbarResponsive">
    <ul class="navbar-nav ml-auto">
    <li class="nav-item">
-   <a class="nav-link js-scroll-trigger" href="./#AboutMe">About Me</a>
+   <a class="nav-link js-scroll-trigger" href="/#AboutMe">About Me</a>
    </li>
    <li class="nav-item">
    <a class="nav-link js-scroll-trigger" href="./#Interests">Interests</a>
@@ -52,7 +52,7 @@
       <h1 class="">Jeff Smolinski</h1>
       <img
       class="cropped-img text-center"
-      src="./theme/images/headshot.png"
+      src="/theme/images/headshot.png"
     />
       <h2>Software Developer In Omaha, NE</h2>
       
@@ -174,7 +174,7 @@ Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit 
 </div>
 <footer class="footer bg-info">
     <div class="container">
-        <span class="text-white">Place sticky footer content here.</span>
+        <p class="text-white">Place sticky footer content here.</p>
     </div>
 </footer>  
  
