--- a/output/index.html
+++ b/output/index.html
@@ -171,11 +171,32 @@ Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit 
       <hr />
     </div>
   </div>
-</div>
-<footer class="footer bg-info">
-    <div class="container">
-        <p class="text-white">Place sticky footer content here.</p>
+  <div class="row jumbotron" id="ContactMe">
+      <div class="col-md-6 jumbotron text-center">
+        <h2>Contact Me</h2>
+      </div>
+      <div class="col-md-6 ">
+        <form action="https://formspree.io/smolinskija@gmail.com" method="POST">
+          <div class="form-group" >
+          <input class="form-control" type="text" name="name" placeholder="Name">
+          </div>
+          <div class="form-group" >
+            <input class="form-control" type="email" id="mail" name="_replyto" placeholder="Email">
+            </div>
+         
+          <div class="form-group">
+                <textarea class="form-control" rows="4" placeholder="Message"></textarea>
+              </div>
+            <button type="submit" class="btn btn-success float-right">Send</button>
+          </form>
+      </div>
+    </div>  
     </div>
+</div>
+<footer class="footer bg-info text-white text-center">
+  
+    <h2></h2>
+    
 </footer>  
  
 </body>
