--- a/output/index.html
+++ b/output/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="./theme/css/main.css" />
     
- <title>Jeff's Site</title>
+ <title>Jeff's Cover Letter</title>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" 
         crossorigin="anonymous"></script>
@@ -65,10 +65,13 @@
     <div class="col-md-12 jumbotron text-center">
       <h2>About Me</h2>
     </div>
-    <div class="col-md-5">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat imperdiet lectus, in commodo dui. Curabitur euismod arcu elit, in pellentesque nunc pulvinar maximus. Nulla ornare tempus urna, non interdum urna aliquam suscipit. Nunc hendrerit, arcu cursus commodo semper, nibh sapien egestas quam, tempor elementum lacus metus non enim. Nunc suscipit augue risus, ut aliquet ligula porttitor in. Praesent nisi mi, sagittis ac tincidunt in, mollis interdum ipsum. Nullam lacus nunc, mattis ut quam eget, porta bibendum metus. Pellentesque molestie elit eget nibh mollis dapibus. Praesent vulputate posuere sagittis. In vitae volutpat velit.
+    <div class="col-md-5 d-flex flex-column justify-content-around">
+      <p>I am a self taught software developer with four years of experience who primarily writes in Python and Javascript.  I particularly enjoy developing with Scrapy, Django and Vue JS.
+The thing I love most about software development is finding those things that take a ton of manual effort and automating them.
 
-Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit blandit. Sed vestibulum iaculis massa, vitae vehicula mi vehicula commodo. Maecenas faucibus, nisi at lacinia tincidunt, dui diam congue erat, placerat lobortis sem purus vel quam. Quisque commodo justo porta lacus vulputate, eu ultricies magna egestas. Fusce mattis orci vel eros pulvinar, hendrerit aliquam ex vestibulum. Maecenas ac ipsum a lacus tincidunt iaculis. Nunc suscipit diam vitae enim elementum, eu ornare sapien posuere. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+  
+I am currently a graduate IT student at the University of Nebraska at Omaha whose field of study is Cybersecurity.  
+I am looking for a role where I can practice or implement secure development strategies and learn from more experienced team members.      
 
 </p>
     </div>
@@ -78,22 +81,17 @@ Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit 
       <div class="align-self-center">
         <ul>
           <li>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Authored a web scraper, using Scrapy, that yielded hundreds of thousands of lines of business contact data; saving hours of manual prospecting time.
           </li>
         </ul>
         <ul>
           <li>
-            Phasellus non eros sed risus tempor iaculis.Sed volutpat nisl vel rhoncus dapibus.
+            Wrote a Python script that automated a Big Commerce site's monthly upgrades of hunderds of products; saving numerous hours of manual upgrades.
           </li>
         </ul>
         <ul>
           <li>
-            Ut lacinia tortor porta, elementum enim eget, hendrerit turpis.
-          </li>
-        </ul>
-        <ul>
-          <li>
-            Curabitur sollicitudin ligula in quam sodales, at lacinia metus commodo.
+            Deployed a Python package that performs calculations for fitness professionals.  With the help of this software I was able to effectively manage numerous individual's diet exercise programs and helping them lose an average of 3% body fat in the first month.  This software decreased my preperation time from approximately two hours per month per client to one hour per month per client
           </li>
         </ul>
       </div>
@@ -105,38 +103,32 @@ Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit 
       <h2 class="text-center">Interests</h2>
     </div>
     <div class="col-md-5">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat imperdiet lectus, in commodo dui. Curabitur euismod arcu elit, in pellentesque nunc pulvinar maximus. Nulla ornare tempus urna, non interdum urna aliquam suscipit. Nunc hendrerit, arcu cursus commodo semper, nibh sapien egestas quam, tempor elementum lacus metus non enim. Nunc suscipit augue risus, ut aliquet ligula porttitor in. Praesent nisi mi, sagittis ac tincidunt in, mollis interdum ipsum. Nullam lacus nunc, mattis ut quam eget, porta bibendum metus. Pellentesque molestie elit eget nibh mollis dapibus. Praesent vulputate posuere sagittis. In vitae volutpat velit.
-
-Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit blandit. Sed vestibulum iaculis massa, vitae vehicula mi vehicula commodo. Maecenas faucibus, nisi at lacinia tincidunt, dui diam congue erat, placerat lobortis sem purus vel quam. Quisque commodo justo porta lacus vulputate, eu ultricies magna egestas. Fusce mattis orci vel eros pulvinar, hendrerit aliquam ex vestibulum. Maecenas ac ipsum a lacus tincidunt iaculis. Nunc suscipit diam vitae enim elementum, eu ornare sapien posuere. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-
-</p>
+      <div class="align-self-center">
+        <ul>
+          <li>
+            <p><strong>Co-organizer, Omaha Python User Group. </strong>The Omaha Python User Group is a local Meetup dedicated to the Python language.  Members present on various topics and participate in group project.</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p><strong>Active member, Nullify. </strong>Nullify is the University of Nebraska at Omaha's Cybersecurity club.  The purpose of this club is to discuss electronic security topics and participate in capture the flag competitions.</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p><strong>Avid martial artist. </strong>I currently train at Omaha Kali where which teaches Brazilian Jiu Jitsu, Muay Thai, the Filipino Martial Arts, and Jeet Kune Do.</p>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="col-md-6 offset-md-1 d-flex flex-column justify-content-around">
-      <h3 class="text-center">Projects</h3>
+      <h3 class="text-center">Open Source Projects</h3>
 
       <div class="align-self-center">
 
         <ul class="">
           <li>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </li>
-        </ul>
-
-        <ul class="">
-          <li>
-            Phasellus non eros sed risus tempor iaculis.Sed volutpat nisl vel rhoncus dapibus.
-          </li>
-        </ul>
-
-        <ul class="">
-          <li>
-            Ut lacinia tortor porta, elementum enim eget, hendrerit turpis.
-          </li>
-        </ul>
-
-        <ul class="">
-          <li>
-            Curabitur sollicitudin ligula in quam sodales, at lacinia metus commodo.
+            <a href="https://pypi.org/project/fitness-tools/">Fitness Tools</a>
           </li>
         </ul>
       </div>
@@ -146,25 +138,7 @@ Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit 
 
         <ul class="">
           <li>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </li>
-        </ul>
-
-        <ul class="">
-          <li>
-            Phasellus non eros sed risus tempor iaculis.Sed volutpat nisl vel rhoncus dapibus.
-          </li>
-        </ul>
-
-        <ul class="">
-          <li>
-            Ut lacinia tortor porta, elementum enim eget, hendrerit turpis.
-          </li>
-        </ul>
-
-        <ul class="">
-          <li>
-            Curabitur sollicitudin ligula in quam sodales, at lacinia metus commodo.
+            <a href="https://github.com/Jeffallan/Python-3-Magic-Methods">Python 3 Magic Methods</a>
           </li>
         </ul>
       </div>
@@ -178,14 +152,14 @@ Praesent aliquet facilisis magna. Vivamus sit amet lorem dapibus nisl hendrerit 
       <div class="col-md-6 ">
         <form action="https://formspree.io/smolinskija@gmail.com" method="POST">
           <div class="form-group" >
-          <input class="form-control" type="text" name="name" placeholder="Name">
+          <input class="form-control" type="text" name="name" placeholder="Name" required>
           </div>
           <div class="form-group" >
-            <input class="form-control" type="email" id="mail" name="_replyto" placeholder="Email">
+            <input class="form-control" type="email" id="mail" name="_replyto" placeholder="Email" required>
             </div>
          
           <div class="form-group">
-                <textarea class="form-control" rows="4" placeholder="Message"></textarea>
+                <textarea class="form-control" rows="4" placeholder="Message" required></textarea>
               </div>
             <button type="submit" class="btn btn-success float-right">Send</button>
           </form>
