--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="row jumbotron">
     <div class="col-md-12 text-center">
       <hr />
-      <h1 class="">Jeff Smolinski</h1>
+      
       <img
       class="cropped-img text-center"
       src="./theme/images/headshot.png"
@@ -150,7 +150,7 @@ I am looking for a role where I can practice or implement secure development str
         <h2>Contact Me</h2>
       </div>
       <div class="col-md-6 ">
-        <form action="https://formspree.io/smolinskija@gmail.com" method="POST">
+        <form action="https://formspree.io/jeff@ravensecurity.net" method="POST">
           <div class="form-group" >
           <input class="form-control" type="text" name="name" placeholder="Name" required>
           </div>
