update move header out of container

--- a/index.html
+++ b/index.html
@@ -203,10 +203,8 @@
     </div>
   </div> 
   </div>
-  <footer class="footer bg-info text-white text-center">
-    <h2></h2>
-  </footer>
 </div>
+<footer class="footer bg-info text-white text-center mt-3"></footer>
 </body>
 
 </html>
